tdf#136132 DOCX export: fix space in table formula

Don't add extra space after the equal sign again and again.

See commit 82189fdc93ac337e1de3379d678eca6b7654e6fc
(tdf133647 tdf123386 tdf123389 fix DOCX table formula export)
and commit cf596c43315bb96b5e7256a82256f1ccb8c9c4d0
(tdf#133163 DOCX: export formula cells).

Change-Id: I45b49ce572c8e668571ed0550be13beff91634d6
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/101405
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>